<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.password.kg.passwordbook.AddPasswordActivity"
    tools:showIn="@layout/activity_add_password"
    android:background="@color/mainBackground">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/select_category_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:paddingTop="8dp"
        android:text="@string/selectCategory_txt"/>

    <Spinner
        android:id="@+id/category_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:layout_below="@+id/select_category_textview">
    </Spinner>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/row_title_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/category_spinner"
        android:paddingTop="8dp">

        <EditText
            android:id="@+id/row_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_edittxt"
            android:maxLines="1"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/row_website_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/row_title_view">

        <EditText
            android:id="@+id/row_website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/website_edittxt"
            android:maxLines="1"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/row_account_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/row_website_view">

        <EditText
            android:id="@+id/row_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/account_edtitxt"
            android:maxLines="1"/>

    </android.support.design.widget.TextInputLayout>

    <ImageButton
        android:id="@+id/password_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:src="@drawable/ic_eye"
        android:background="@color/mainBackground"
        android:layout_above="@+id/row_description_view"
        android:layout_toStartOf="@+id/generate_pass_button"
        android:layout_toLeftOf="@+id/generate_pass_button"/>

    <ImageButton
        android:id="@+id/generate_pass_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:src="@drawable/ic_reload"
        android:layout_above="@+id/row_description_view"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@color/mainBackground" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/row_password_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/row_account_view"
        android:layout_toStartOf="@id/password_show"
        android:layout_toLeftOf="@+id/password_show">

        <EditText
            android:id="@+id/row_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password_edittxt"
            android:maxLines="1"/>

    </android.support.design.widget.TextInputLayout>




    <android.support.design.widget.TextInputLayout
        android:id="@+id/row_description_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/row_password_view">

        <EditText
            android:id="@+id/row_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description_edittxt" />

    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/addPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/row_description_view"
        android:gravity="center"
        android:text="@string/confirm_btn"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
