<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:padding="28dp" >

        <ProgressBar
            android:id="@android:id/progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/row_category_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_below="@android:id/progress">

            <EditText
                android:id="@+id/row_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/category_edittext"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/color_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/row_category_view"
            android:gravity="center_horizontal"
            android:paddingTop="8dp"
            android:text="@string/categoryColor_textview"/>


        <com.password.kg.passwordbook.colorpicker.ColorPickerPalette
            android:id="@+id/color_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/color_textview"
            android:layout_gravity="center"
            android:paddingTop="8dp"
            android:gravity="center"
            android:visibility="gone" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/category_add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/color_picker"
            android:paddingTop="8dp"
            android:layout_centerHorizontal="true"
            android:text="@string/confirm_btn"/>
    </RelativeLayout>
</ScrollView>