<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.password.kg.passwordbook.ViewPasswordActivity"
    tools:showIn="@layout/activity_view_password"
    android:background="@color/mainBackground">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/row_website_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/ripple_webButton"
        android:layout_marginTop="12dp">

        <EditText
            android:id="@+id/row_website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/website_edittxt"
            android:maxLines="1"/>

    </android.support.design.widget.TextInputLayout>

    <com.andexert.library.RippleView
        android:id="@+id/ripple_webButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/row_website_view"
        android:layout_alignEnd="@+id/ripple_passwordBtn"
        android:layout_marginLeft="8dp"
        >
        <ImageButton
            android:id="@+id/copy_web_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_content_copy"

            android:background="@color/mainBackground"
             />
    </com.andexert.library.RippleView>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/row_account_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/row_website_view"
        android:layout_toStartOf="@+id/ripple_accountButton"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/row_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/account_edtitxt"
            android:maxLines="1"/>

    </android.support.design.widget.TextInputLayout>

    <com.andexert.library.RippleView
        android:id="@+id/ripple_accountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/row_password_view"
        android:layout_toEndOf="@+id/row_website_view"
        android:layout_marginLeft="8dp">
        <ImageButton
            android:id="@+id/copy_account_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_content_copy"

            android:background="@color/mainBackground"
             />
    </com.andexert.library.RippleView>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/row_password_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/row_account_view"
        android:layout_toStartOf="@+id/ripple_passwordShow"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/row_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_edittxt"
            android:maxLines="1"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <com.andexert.library.RippleView
        android:id="@+id/ripple_passwordShow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/ripple_passwordBtn"
        android:layout_toStartOf="@+id/ripple_passwordBtn"
        android:layout_marginLeft="8dp"
        >
        <ImageButton
            android:id="@+id/password_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_eye"
            android:background="@color/mainBackground" />
    </com.andexert.library.RippleView>


    <com.andexert.library.RippleView
        android:id="@+id/ripple_passwordBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_above="@+id/row_description_view"
        android:layout_alignEnd="@+id/ripple_descriptionBtn">
        <ImageButton
            android:id="@+id/copy_pass_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_content_copy"
            android:background="@color/mainBackground" />
    </com.andexert.library.RippleView>




    <android.support.design.widget.TextInputLayout
        android:id="@+id/row_description_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/row_password_view"
        android:layout_toStartOf="@+id/ripple_descriptionBtn"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/row_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description_edittxt" />

    </android.support.design.widget.TextInputLayout>

    <com.andexert.library.RippleView
        android:id="@+id/ripple_descriptionBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_alignBottom="@+id/row_description_view"
        android:layout_alignParentEnd="true">
        <ImageButton
            android:id="@+id/copy_description_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_content_copy"

            android:background="@color/mainBackground" />
    </com.andexert.library.RippleView>




</RelativeLayout>
